--- a/.github/workflows/deploy-zyt-autofm.yml
+++ b/.github/workflows/deploy-zyt-autofm.yml
@@ -2,9 +2,9 @@ name: Deploy ZYT_AutoFM
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 jobs:
   deploy:
