chore(deploy): 切换部署方式为密码认证

--- a/.github/workflows/deploy-zyt-autofm.yml
+++ b/.github/workflows/deploy-zyt-autofm.yml
@@ -18,39 +18,41 @@ jobs:
       - name: Mark workflow start time
         run: echo "WORKFLOW_START=$(date +%s)" >> $GITHUB_ENV
 
-      # 准备 SSH 私钥 & known_hosts
-      - name: Setup SSH key
+      # 安装 sshpass，用于密码登录
+      - name: Install sshpass
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y sshpass
+
+      # 可选：提前把主机指纹写入 known_hosts（防止首次连接交互确认）
+      - name: Add host to known_hosts
         run: |
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
-
-          # 写入私钥
-          echo "${DEPLOY_SSH_KEY}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-
-          # 添加目标主机到 known_hosts，避免交互确认
           ssh-keyscan -p "${DEPLOY_PORT}" "${DEPLOY_HOST}" >> ~/.ssh/known_hosts
           chmod 644 ~/.ssh/known_hosts
         env:
-          DEPLOY_SSH_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
           DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
           DEPLOY_PORT: ${{ secrets.DEPLOY_PORT }}
 
-      # 通过 SSH 执行 start_server.sh，并把输出保存到 deploy.log
+      # 通过 SSH（密码）执行 start_server.sh，并把输出保存到 deploy.log
       - name: Deploy to server via SSH
         id: deploy
         run: |
           set -o pipefail
 
-          # 避免使用 ssh-agent 中多余的 key，防止 "Too many authentication failures"
-          unset SSH_AUTH_SOCK
-
-          ssh -o IdentitiesOnly=yes -i ~/.ssh/id_ed25519 -p "${DEPLOY_PORT}" "${DEPLOY_USER}@${DEPLOY_HOST}" \
-            'bash /www/dk_project/dk_app/qinglong/QingLong/data/scripts/ZYT_AutoFM/start_server.sh' | tee deploy.log
+          # 使用密码认证，强制优先走 password
+          sshpass -p "${DEPLOY_PASSWORD}" \
+            ssh -o PreferredAuthentications=password \
+                -o PubkeyAuthentication=no \
+                -p "${DEPLOY_PORT}" "${DEPLOY_USER}@${DEPLOY_HOST}" \
+                'bash /www/dk_project/dk_app/qinglong/QingLong/data/scripts/ZYT_AutoFM/start_server.sh' \
+            | tee deploy.log
         env:
           DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
           DEPLOY_PORT: ${{ secrets.DEPLOY_PORT }}
           DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
+          DEPLOY_PASSWORD: ${{ secrets.DEPLOY_PASSWORD }}
 
       # 部署成功通知
       - name: Notify success
