--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ pytest~=8.3.5
 psutil~=7.1.3
 pyzbar~=0.1.9
 turbojpeg~=0.0.2
-opencv-python~=4.12.0.88
+opencv-python-headless~=4.12.0.88
 numpy~=1.24.4
 PyYAML~=6.0.3
 apscheduler
