--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 blinker==1.8.2
 certifi==2025.8.3
-cffi==1.17.1
+cffi
 charset-normalizer==3.4.3
 click==8.1.8
 colorama==0.4.6
@@ -39,6 +39,6 @@ psutil~=7.1.3
 pyzbar~=0.1.9
 turbojpeg~=0.0.2
 opencv-python-headless~=4.12.0.88
-numpy~=1.24.4
+numpy
 PyYAML~=6.0.3
 apscheduler
